# compressed-program-template

./: Anchor.toml  Cargo.toml  cargo-generate.toml
programs/compressed-program-template/src/: lib.rs
programs/{{rust-name}}/: Cargo.toml
programs/{{rust-name}}/tests/: test.rs
tests/: compressed-program-template.ts
