[package]
name = "{{rust-name}}"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "{{rust-name-snake-case}}"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
bench-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "{{anchor-version}}"
light-hasher = {version="{{light-hasher-version}}", features = ["solana"] }
light-macros = "{{light-macros-version}}"
light-sdk = "{{light-sdk-version}}"
light-sdk-macros = "{{light-sdk-macros-version}}" 
light-utils = "{{light-utils-version}}"
light-verifier = "{{light-verifier-version}}"

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "{{solana-sdk-version}}"

[dev-dependencies]
light-client ="{{light-client-version}}"
light-test-utils = "{{light-test-utils-version}}"
solana-program-test = "{{solana-program-test-version}}"
tokio = "{{tokio-version}}"
